--- a/apps/influxdb/values.yaml
+++ b/apps/influxdb/values.yaml
@@ -1,27 +1,49 @@
-influxdb2:
+influxdb:
+  persistence:
+    enabled: true
+    accessMode: ReadWriteOnce
+    size: 5Gi
+  setDefaultUser:
+    enabled: true
+    user:
+      username: "admin"
+      password: "admin"
   ingress:
     enabled: true
     tls: true
     secretName: influxdb-tls-certificate
     hostname: influxdb.tribz.cloud
+    className: nginx
     annotations:
-      kubernetes.io/ingress.class: "nginx"
       cert-manager.io/cluster-issuer: letsencrypt-prod
       hajimari.io/appName: InfluxDB
       hajimari.io/icon: google-drive
     path: /
-  env:
-    - name: TZ
-      value: Europe/Zurich
-  adminUser:
-    organization: "influxdata"
-    bucket: "default"
-    user: "admin"
-    retention_policy: "0s"
-    password: "adminadmin"
-  persistence:
-    enabled: true
-    accessMode: ReadWriteOnce
-    size: 5Gi
-    mountPath: /var/lib/influxdb2
-    subPath: ""
+
+  ## The InfluxDB image uses several environment variables to automatically
+  ## configure certain parts of the server.
+  ## Ref: https://hub.docker.com/_/influxdb/
+  env: {}
+    # - name: INFLUXDB_DB
+    #   value: "demo"
+
+  ## InfluxDB configuration
+  ## ref: https://docs.influxdata.com/influxdb/v1.8/administration/config
+  config:
+    reporting_disabled: false
+    rpc: {}
+    meta: {}
+    data: {}
+    coordinator: {}
+    retention: {}
+    shard_precreation: {}
+    monitor: {}
+    http: {}
+    logging: {}
+    subscriber: {}
+    graphite: {}
+    collectd: {}
+    opentsdb: {}
+    udp: {}
+    continuous_queries: {}
+    tls: {}
