--- a/apps/influxdb2/values.yaml
+++ b/apps/influxdb2/values.yaml
@@ -2,12 +2,12 @@ influxdb2:
   ingress:
     enabled: true
     tls: true
-    secretName: influxdb-tls-certificate
-    hostname: influxdb.tribz.cloud
+    secretName: influxdb2-tls-certificate
+    hostname: influxdb2.tribz.cloud
     annotations:
       kubernetes.io/ingress.class: "nginx"
       cert-manager.io/cluster-issuer: letsencrypt-prod
-      hajimari.io/appName: InfluxDB
+      hajimari.io/appName: InfluxDB2
       hajimari.io/icon: google-drive
     path: /
   env:
