--- a/system/longhorn-system/values.yaml
+++ b/system/longhorn-system/values.yaml
@@ -3,7 +3,7 @@ longhorn:
     nodeDownPodDeletionPolicy: delete-both-statefulset-and-deployment-pod
     replicaAutoBalance: best-effort
     defaultDataLocality: best-effort
-    backupTarget: nfs://truenas.tribz.cloud:/mnt/tank/k8s/nfs/longhorn-backup
+    backupTarget: nfs://192.168.1.3:/mnt/tank/k8s/nfs/longhorn-backup
   persistence:
     # If you have three or more nodes for storage, use 3; otherwise use 2
     defaultClassReplicaCount: 3  # TODO run DR test to see if we actually need 3
