--- a/system/ingress-nginx/values.yaml
+++ b/system/ingress-nginx/values.yaml
@@ -11,6 +11,7 @@ ingress-nginx:
         enabled: true
   tcp:
     22: gitea/gitea-ssh:22
-    2003: graphite/graphite:2003
+    2049: external-ingress/truenas:2049
+    222: external-ingress/truenas:22
   udp:
     1514: graylog/graylog-syslog-udp:1514
