--- a/apps/external-ingress/adguard.yaml
+++ b/apps/external-ingress/adguard.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: external-ingress
 spec:
   type: ExternalName
-  externalName: "192.168.1.1"
+  externalName: opnsense-backend.tribz.cloud
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
