--- a/apps/external-ingress/switch2.yaml
+++ b/apps/external-ingress/switch2.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: external-ingress
 spec:
   type: ExternalName
-  externalName: "192.168.1.4"
+  externalName: switch2-backend.tribz.cloud
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
