--- a/apps/external-ingress/truenas.yaml
+++ b/apps/external-ingress/truenas.yaml
@@ -25,7 +25,10 @@ metadata:
     cert-manager.io/cluster-issuer: letsencrypt-prod
     hajimari.io/appName: truenas
     hajimari.io/icon: multimedia
-    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    nginx.ingress.kubernetes.io/server-snippet: |
+      set $http_upgrade '';
+      set $connection_upgrade '';
 spec:
   ingressClassName: nginx
   tls:
