--- a/system/democratic-csi/values.yaml
+++ b/system/democratic-csi/values.yaml
@@ -74,9 +74,9 @@ democratic-csi:
       driver: freenas-nfs
       instance_id:
       httpConnection:
-        protocol: https
-        host: truenas.tribz.cloud
-        port: 443
+        protocol: http
+        host: truenas-backend.tribz.cloud
+        port: 80
         # use only 1 of apiKey or username/password
         # if both are present, apiKey is preferred
         # apiKey is only available starting in TrueNAS-12
@@ -88,7 +88,7 @@ democratic-csi:
         # leave unset for auto-detection
         apiVersion: 2
       sshConnection:
-        host: truenas.tribz.cloud
+        host: truenas-backend.tribz.cloud
         port: 22
         username: root
         # This is the SSH key that we generated for passwordless authentication
