--- a/apps/grocy/templates/deployment.yaml
+++ b/apps/grocy/templates/deployment.yaml
@@ -30,7 +30,7 @@ spec:
             - name: PGID
               value: "1000"
             - name: TZ
-              value: Europe/London
+              value: Europe/Zurich
           volumeMounts:
           - mountPath: /config
             name: grocy-config
