--- a/apps/trackmania/templates/deployment-evosc.yaml
+++ b/apps/trackmania/templates/deployment-evosc.yaml
@@ -45,3 +45,10 @@ spec:
             initialDelaySeconds: 10
             periodSeconds: 5
             timeoutSeconds: 5
+          volumeMounts:
+          - mountPath: /controller
+            name: evosc-controller
+      volumes:
+        - name: evosc-controller
+          persistentVolumeClaim:
+           claimName: evosc-controller
