--- a/apps/trackmania/templates/deployment-evosc.yaml
+++ b/apps/trackmania/templates/deployment-evosc.yaml
@@ -18,6 +18,7 @@ spec:
       containers:
         - name: evosc
           image: evotm/evosc:latest
+          command: ["sleep infinity"]
           env:
             - name: TZ
               value: Europe/Zurich
@@ -45,10 +46,10 @@ spec:
             initialDelaySeconds: 10
             periodSeconds: 5
             timeoutSeconds: 5
-          volumeMounts:
-          - mountPath: /controller
-            name: evosc-controller
-      volumes:
-        - name: evosc-controller
-          persistentVolumeClaim:
-           claimName: evosc-controller
+      #     volumeMounts:
+      #     - mountPath: /controller
+      #       name: evosc-controller
+      # volumes:
+      #   - name: evosc-controller
+      #     persistentVolumeClaim:
+      #      claimName: evosc-controller
