--- a/apps/trackmania/templates/deployment-evosc.yaml
+++ b/apps/trackmania/templates/deployment-evosc.yaml
@@ -38,14 +38,14 @@ spec:
               value: SuperAdmin
             - name: RPC_PASSWORD
               value: SuperAdmin
-          livenessProbe:
-            exec:
-              command:
-                - pgrep -x php || exit 1
-            failureThreshold: 3
-            initialDelaySeconds: 10
-            periodSeconds: 5
-            timeoutSeconds: 5
+          # livenessProbe:
+          #   exec:
+          #     command:
+          #       - pgrep -x php || exit 1
+          #   failureThreshold: 3
+          #   initialDelaySeconds: 10
+          #   periodSeconds: 5
+          #   timeoutSeconds: 5
       #     volumeMounts:
       #     - mountPath: /controller
       #       name: evosc-controller
