--- a/apps/trackmania/templates/deployment-evosc.yaml
+++ b/apps/trackmania/templates/deployment-evosc.yaml
@@ -18,9 +18,9 @@ spec:
       containers:
         - name: evosc
           image: evotm/evosc:latest
-          command: ["/bin/sh", "-c"]
-          args: 
-          - "sleep infinity"
+          # command: ["/bin/sh", "-c"]
+          # args: 
+          # - "sleep infinity"
           env:
             - name: TZ
               value: Europe/Zurich
