--- a/apps/trackmania/templates/deployment-evosc.yaml
+++ b/apps/trackmania/templates/deployment-evosc.yaml
@@ -18,9 +18,9 @@ spec:
       containers:
         - name: evosc
           image: evotm/evosc:latest
-          # command: ["/bin/sh", "-c"]
-          # args: 
-          # - "sleep infinity"
+          command: ["/bin/sh", "-c"]
+          args: 
+          - "touch /controller/config/default/evosc.config.json"
           env:
             - name: TZ
               value: Europe/Zurich
