--- a/system/ingress-nginx/values.yaml
+++ b/system/ingress-nginx/values.yaml
@@ -12,5 +12,6 @@ ingress-nginx:
   tcp:
     22: gitea/gitea-ssh:22
     2049: external-ingress/truenas:2049
+    2003: influxdb/influxdb:2003
   udp:
     1514: graylog/graylog-syslog-udp:1514
