--- a/apps/trackmania/templates/deployment-evosc.yaml
+++ b/apps/trackmania/templates/deployment-evosc.yaml
@@ -20,7 +20,7 @@ spec:
           image: evotm/evosc:latest
           command: ["/bin/sh", "-c"]
           args: 
-          - "touch /controller/config/default/evosc.config.json && php esc run qwe wer ert rtz rtz tzu"
+          - "touch /controller/config/default/evosc.config.json && php esc run && qwe && wer && ert && rtz"
           env:
             - name: TZ
               value: Europe/Zurich
