--- a/apps/trackmania/templates/deployment-trackmania.yaml
+++ b/apps/trackmania/templates/deployment-trackmania.yaml
@@ -35,6 +35,10 @@ spec:
               value: "false"
             # - name: FORCE_IP_ADDRESS
             #   value: "true"
+          ports:
+            - containerPort: 2350
+              protocol: UDP
+            - containerPort: 2350
           livenessProbe:
             exec:
               command:
