--- a/apps/trackmania/templates/deployment-trackmania.yaml
+++ b/apps/trackmania/templates/deployment-trackmania.yaml
@@ -39,6 +39,7 @@ spec:
             - containerPort: 2350
               protocol: UDP
             - containerPort: 2350
+            - containerPort: 5000
           livenessProbe:
             exec:
               command:
