--- a/apps/trackmania/templates/kustomization.yaml
+++ b/apps/trackmania/templates/kustomization.yaml
@@ -5,4 +5,5 @@ resources:
   - deployment-trackmania.yaml
   - deployment-evosc.yaml
   - service-trackmania.yaml
-  - pvc-evosc-controller.yaml
+  - pvc-trackmania-serverdata.yaml
+  - pvc-evosc-config.yaml
