--- a/apps/trackmania/templates/pvc-trackmania-serverdata.yaml
+++ b/apps/trackmania/templates/pvc-trackmania-serverdata.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: evosc-controller
+  name: trackmania-serverdata
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 1Gi
