--- a/apps/trackmania/templates/deployment-trackmania.yaml
+++ b/apps/trackmania/templates/deployment-trackmania.yaml
@@ -48,3 +48,10 @@ spec:
             initialDelaySeconds: 10
             periodSeconds: 5
             timeoutSeconds: 5
+          volumeMounts:
+          - mountPath: /server/UserData
+            name: trackmania-serverdata
+      volumes:
+        - name: trackmania-serverdata
+          persistentVolumeClaim:
+           claimName: trackmania-serverdata
