--- a/apps/trackmania/templates/deployment-evosc.yaml
+++ b/apps/trackmania/templates/deployment-evosc.yaml
@@ -23,7 +23,7 @@ spec:
           - echo starting datainit;
             ls -la /controller;
             ls -la /datainit;
-            if [ -d /datainit/Config ];
+            if [ -d /datainit/config ];
               then echo already preseeded;
               else cp -r /controller/. /datainit;
             fi;
