--- a/apps/trackmania/templates/deployment-evosc.yaml
+++ b/apps/trackmania/templates/deployment-evosc.yaml
@@ -32,6 +32,11 @@ spec:
         volumeMounts:
         - mountPath: /datainit
           name: evosc-config
+        securityContext:
+          capabilities:
+            runAsUser: 9999
+            runAsGroup: 9999
+            fsGroup: 9999
       containers:
         - name: evosc
           image: evotm/evosc:latest
