--- a/apps/trackmania/templates/deployment-evosc.yaml
+++ b/apps/trackmania/templates/deployment-evosc.yaml
@@ -35,6 +35,7 @@ spec:
         securityContext:
           runAsUser: 9999
           runAsGroup: 9999
+          privileged: true
       containers:
         - name: evosc
           image: evotm/evosc:latest
