--- a/apps/trackmania/templates/deployment-evosc.yaml
+++ b/apps/trackmania/templates/deployment-evosc.yaml
@@ -25,7 +25,7 @@ spec:
             ls -la /datainit;
             if [ -d /datainit/config ];
               then echo already preseeded;
-              else cp -r /controller/. /datainit;
+              else sudo cp -r /controller/. /datainit;
             fi;
             ls -la /datainit;
             echo done;
