--- a/apps/trackmania/templates/deployment-evosc.yaml
+++ b/apps/trackmania/templates/deployment-evosc.yaml
@@ -25,7 +25,7 @@ spec:
             ls -la /datainit;
             if [ -d /datainit/config ];
               then echo already preseeded;
-              else rm -rf /datainit; 
+              else rm -rf /datainit/lost+found; 
               git clone https://github.com/EvoTM/EvoSC.git /datainit;
             fi;
             ls -la /datainit;
