--- a/apps/trackmania/templates/deployment-evosc.yaml
+++ b/apps/trackmania/templates/deployment-evosc.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       initContainers:
       - name: evosc-datainit
-        image: busybox:latest
+        image: alpine/git:latest
         command: ["/bin/sh", "-c"]
         args:
           - echo starting datainit;
