--- a/apps/trackmania/templates/deployment-evosc.yaml
+++ b/apps/trackmania/templates/deployment-evosc.yaml
@@ -38,11 +38,11 @@ spec:
       containers:
         - name: evosc
           image: evotm/evosc:latest
-          # command: ["/bin/sh", "-c"]
-          # args: 
+          command: ["/bin/sh", "-c"]
+          args: 
           # - "touch /controller/config/default/evosc.config.json && php esc run"
           # first run: then do php esc run manually
-          # - "sleep infinity"
+          - "/usr/local/bin/entrypoint.sh && sleep infinity"
           env:
             - name: TZ
               value: Europe/Zurich
