--- a/apps/trackmania/templates/deployment-evosc.yaml
+++ b/apps/trackmania/templates/deployment-evosc.yaml
@@ -17,24 +17,26 @@ spec:
     spec:
       initContainers:
       - name: evosc-datainit
-        image: alpine/git:latest
+        image: evotm/evosc:latest
         command: ["/bin/sh", "-c"]
         args:
           - echo starting datainit;
+            ls -la /controller;
             ls -la /datainit;
             if [ -d /datainit/config ];
               then echo already preseeded;
-              else mkdir /datainit/gitseed; 
-              git clone https://github.com/EvoTM/EvoSC.git /datainit/gitseed;
-              cp -r /datainit/gitseed/. /datainit;
-              touch /controller/config/default/evosc.config.json;
-              rm -rf /datainit/gitseed;
+              else cp -r /controller/. /datainit;
             fi;
             ls -la /datainit;
             echo done;
         volumeMounts:
         - mountPath: /datainit
           name: evosc-config
+        securityContext:
+          runAsUser: 9999
+          runAsGroup: 9999
+          allowPrivilegeEscalation: true
+          privileged: true
       containers:
         - name: evosc
           image: evotm/evosc:latest
@@ -42,7 +44,7 @@ spec:
           args: 
           # - "touch /controller/config/default/evosc.config.json && php esc run"
           # first run: then do php esc run manually
-          - "/usr/local/bin/entrypoint.sh && sleep infinity"
+          - "touch /controller/config/default/evosc.config.json && sleep infinity"
           env:
             - name: TZ
               value: Europe/Zurich
