--- a/apps/trackmania/templates/deployment-evosc.yaml
+++ b/apps/trackmania/templates/deployment-evosc.yaml
@@ -15,6 +15,11 @@ spec:
       labels:
         app: evosc
     spec:
+      securityContext:
+        runAsUser: 9999
+        runAsGroup: 9999
+        allowPrivilegeEscalation: true
+        privileged: true
       initContainers:
       - name: evosc-datainit
         image: evotm/evosc:latest
@@ -25,7 +30,7 @@ spec:
             ls -la /datainit;
             if [ -d /datainit/config ];
               then echo already preseeded;
-              else cp -r /controller/. /var;
+              else cp -r /controller/. /datainit;
             fi;
             ls -la /datainit;
             echo done;
