--- a/apps/trackmania/templates/deployment-evosc.yaml
+++ b/apps/trackmania/templates/deployment-evosc.yaml
@@ -25,9 +25,9 @@ spec:
             ls -la /datainit;
             if [ -d /datainit/config ];
               then echo already preseeded;
-              else sleep infinity
-              touch /controller/config/default/evosc.config.json;
-              cp -r /controller/. /datainit;
+              else cp -r /controller/. /datainit;
+              touch /datainit/config/default/evosc.config.json;
+              chown -R evosc /datainit
             fi;
             ls -la /datainit;
             echo done;
@@ -46,7 +46,7 @@ spec:
           args: 
           # - "touch /controller/config/default/evosc.config.json && php esc run"
           # first run: then do php esc run manually
-          - " && sleep infinity"
+          - "sleep infinity"
           env:
             - name: TZ
               value: Europe/Zurich
