--- a/apps/trackmania/templates/kustomization.yaml
+++ b/apps/trackmania/templates/kustomization.yaml
@@ -5,5 +5,6 @@ resources:
   - deployment-trackmania.yaml
   - deployment-evosc.yaml
   - service-trackmania.yaml
+  - ingress-trackmania.yaml
   - pvc-trackmania-serverdata.yaml
   - pvc-evosc-config.yaml
