--- a/system/ingress-nginx/values.yaml
+++ b/system/ingress-nginx/values.yaml
@@ -13,5 +13,7 @@ ingress-nginx:
     22: gitea/gitea-ssh:22
     2049: external-ingress/truenas:2049
     2003: influxdb/influxdb:2003
+    trackmania: trackmania/trackmania:2350
   udp:
     1514: graylog/graylog-syslog-udp:1514
+    trackmania: trackmania/trackmania:2350
