--- a/apps/trackmania/templates/deployment-trackmania.yaml
+++ b/apps/trackmania/templates/deployment-trackmania.yaml
@@ -53,8 +53,8 @@ spec:
               value: "false"
             - name: SAVE_ALL_INDIVIDUAL_RUNS
               value: "false"
-            # - name: FORCE_IP_ADDRESS
-            #   value: "true"
+            - name: FORCE_IP_ADDRESS
+              value: "trackmania.tribz.cloud"
           ports:
             - containerPort: 2350
               protocol: UDP
