--- a/apps/trackmania/templates/deployment-trackmania.yaml
+++ b/apps/trackmania/templates/deployment-trackmania.yaml
@@ -59,7 +59,7 @@ spec:
             - name: SAVE_ALL_INDIVIDUAL_RUNS
               value: "false"
             - name: FORCE_IP_ADDRESS
-              value: "trackmania.tribz.cloud"
+              value: "trackmania.tribz.cloud:2350"
           ports:
             - containerPort: 2350
               protocol: UDP
