--- a/apps/trackmania/templates/deployment-evosc.yaml
+++ b/apps/trackmania/templates/deployment-evosc.yaml
@@ -45,9 +45,9 @@ spec:
           image: evotm/evosc:latest
           command: ["/bin/sh", "-c"]
           args: 
-          - "php esc run"
+          # - "php esc run"
           # first run: then do php esc run manually
-          # - "sleep infinity"
+          - "sleep infinity"
           env:
             - name: TZ
               value: Europe/Zurich
