--- a/system/longhorn-system/values.yaml
+++ b/system/longhorn-system/values.yaml
@@ -7,6 +7,7 @@ longhorn:
   persistence:
     # If you have three or more nodes for storage, use 3; otherwise use 2
     defaultClassReplicaCount: 3  # TODO run DR test to see if we actually need 3
+    defaultDataLocality: best-effort
   ingress:
     enabled: true
     ingressClassName: nginx
