--- a/system/longhorn-system/templates/storageclass-retain.yaml
+++ b/system/longhorn-system/templates/storageclass-retain.yaml
@@ -7,7 +7,7 @@ reclaimPolicy: Retain
 volumeBindingMode: Immediate
 allowVolumeExpansion: true
 parameters:
-  dataLocality: disabled
+  dataLocality: best-effor
   fromBackup: ''
   fsType: ext4
   numberOfReplicas: '3'
