--- a/apps/trackmania/templates/pvc-evosc-config.yaml
+++ b/apps/trackmania/templates/pvc-evosc-config.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   storageClassName: longhorn-retain
   dataSource:
-   name: evosc-config
+   name: pvc-f8469456-f44a-4ef8-806b-75e30db578a8
    kind: PersistentVolumeClaim
   accessModes:
     - ReadWriteOnce
