--- a/apps/trackmania/values-mariadb.yaml
+++ b/apps/trackmania/values-mariadb.yaml
@@ -8,3 +8,7 @@ primary:
     existingClaim: mariadb
 diagnosticMode:
   enabled: false
+initdbScripts:
+  my_init_script.sh: |
+     #!/bin/bash
+     echo "Do something."
