--- a/apps/trackmania/values-mariadb.yaml
+++ b/apps/trackmania/values-mariadb.yaml
@@ -2,7 +2,7 @@ auth:
   database: evosc
   username: evosc
   password: evosc
-  # rootPassword: 1pv5zq9XNG
+  rootPassword: IfFoFFiARG
 primary:
   persistence:
     existingClaim: mariadb
