--- a/apps/trackmania/kustomization.yaml
+++ b/apps/trackmania/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
 helmCharts:
 - name: mariadb
   repo: https://charts.bitnami.com/bitnami
-  version: 11.4.*
+  version: 11.4.2
   releaseName: trackmania
   namespace: trackmania
   valuesFile: values-mariadb.yaml
