--- a/apps/elasticsearch/values.yaml
+++ b/apps/elasticsearch/values.yaml
@@ -2,9 +2,9 @@ elasticsearch:
   volumeClaimTemplate:
     accessModes:
     - ReadWriteOnce
-    # resources:
-    #   requests:
-    #     storage: 10Gi
+    resources:
+      requests:
+        storage: 10Gi
   extraEnvs:
     - name: TZ
       value: Europe/Zurich
