--- a/system/longhorn-system/values.yaml
+++ b/system/longhorn-system/values.yaml
@@ -8,6 +8,7 @@ longhorn:
     # If you have three or more nodes for storage, use 3; otherwise use 2
     defaultClassReplicaCount: 3  # TODO run DR test to see if we actually need 3
     defaultDataLocality: best-effort
+    removeSnapshotsDuringFilesystemTrim: enabled
   ingress:
     enabled: true
     ingressClassName: nginx
