--- a/apps/admin/deployment.yaml
+++ b/apps/admin/deployment.yaml
@@ -21,7 +21,7 @@ spec:
         command: ["/bin/sh", "-c"]
         args:
           - echo starting init;
-            dnf install curl
+            apk add curl
             curl -LO https://dl.k8s.io/release/v1.24.10/bin/linux/amd64/
             chmod +x kubectl
             mkdir -p ~/.local/bin
