--- a/apps/admin/deployment.yaml
+++ b/apps/admin/deployment.yaml
@@ -21,7 +21,7 @@ spec:
         command: ["/bin/sh", "-c"]
         args:
           - echo starting init;
-            apk add curl git kubectl=1.24.10;
+            apk add curl git kubectl=1.26.1-r0;
             git clone https://github.com/Huawei/eSDK_K8S_Plugin.git;
             echo done;
       containers:
