--- a/apps/admin/deployment.yaml
+++ b/apps/admin/deployment.yaml
@@ -21,7 +21,11 @@ spec:
         command: ["/bin/sh", "-c"]
         args:
           - echo starting init;
-            apk add curl git kubectl=1.26.1-r0;
+            apk add curl git;
+            curl -LO https://dl.k8s.io/v1.24.10/bin/linux/amd64/;
+            chmod +x kubectl;
+            mkdir -p ~/.local/bin;
+            mv ./kubectl ~/.local/bin/kubectl;
             git clone https://github.com/Huawei/eSDK_K8S_Plugin.git;
             echo done;
       containers:
